<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePost"
    android:background="#000000">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="#40873E"
                android:hint="@string/item_name"
                android:paddingHorizontal="12dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/pickedImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="32dp"
                tools:src="@tools:sample/avatars" />

            <Button
                android:id="@+id/pickImage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#A7FF87"
                android:text="Pick Image" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="#40873E"
                android:hint="@string/item_price"
                android:paddingHorizontal="12dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="392dp"
                    android:layout_height="24dp"
                    android:background="#FFFFFF"
                    android:inputType="numberSigned|number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="#40873E"
                android:hint="@string/item_description"
                android:paddingHorizontal="12dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="387dp"
                    android:layout_height="23dp"
                    android:background="#FFFFFF"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="#FFFFFF"
                android:entries="@array/categories" />

            <Button
                android:id="@+id/Post"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="#94F679"
                android:text="@string/post" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
