<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MessageScreen"
    android:background="#000000">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputTo"
        android:background="#FFFFFF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:background="#FFFFFF"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputBody"
        android:background="#FFFFFF"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textInputSubject">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:background="#FFFFFF"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputSubject"
        android:background="#FFFFFF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textInputTo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:background="#FFFFFF"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView7"
        android:background="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/subject"
        app:layout_constraintBottom_toBottomOf="@+id/textInputSubject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputSubject" />

    <TextView
        android:id="@+id/textView8"
        android:background="#FFFFFF"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/to"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/textInputTo"
        app:layout_constraintEnd_toStartOf="@+id/textInputSubject"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textInputTo" />

    <TextView
        android:id="@+id/textView9"
        android:background="#FFFFFF"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/body"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/textInputSubject"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textInputBody" />

    <TextView
        android:id="@+id/textView10"
        android:background="#FFFFFF"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputBody"
        app:layout_constraintEnd_toStartOf="@+id/textInputBody"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/Send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#A0FF80"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputBody" />
</androidx.constraintlayout.widget.ConstraintLayout>

